[package]
name = "bartholomew"
version = "0.3.0"
edition = "2021"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.57"
brotli = "3.3.4"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
flate2 = "1.0.23"
handlebars = { version = "4.2.2", features = ["dir_source", "script_helper"] }
handlebars_sprig = "0.3.0"
http = "0.2.6"
pulldown-cmark = { version = "0.9.1", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
spin-sdk = { git = "https://github.com/fermyon/spin", rev = "4c6ec40ef8b518c1e901a476c752ad961525bef8", optional = true }
toml = "0.5.9"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8", default-features = false }

[workspace]
members = ["bart"]


[features]
default = ["spin"]
spin = ["dep:spin-sdk"]
