[package]
name = "bartholomew"
version = "0.10.0"
edition = "2021"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.57"
brotli = "3.3.4"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
flate2 = "1.0.23"
handlebars = { version = "4.2.2", features = ["dir_source", "script_helper"] }
handlebars_sprig = { git = "https://github.com/itowlson/handlebars-sprig", branch = "update-spin-sdk", optional = true }
http = "1"
pulldown-cmark = { version = "0.9.1", default-features = false }
rhai = "1.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
spin-sdk = { version = "3", optional = true }
toml = "0.5.9"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba", default-features = false }
regex = "1"
walkdir = "2.4.0"
glob = "0.3.1"

[workspace]
members = ["bart"]


[features]
default = ["server"]
spin = ["dep:spin-sdk"]
server = ["spin", "dep:handlebars_sprig"]
